# quick-process

./: .gitignore  README.md  changelog.md  default.nix  gen-cabal.sh  hie.yaml  quick-process.cabal  quick-process.cabal.template  th-process.cabal  trace-embrace.yaml
conduit-find/Data/Conduit/: Find.hs
hlist/Data/HList/: Data.hs  FakePrelude.hs  HList.hs  HSort.hs  HZip.hs  Label3.hs  Label5.hs  Labelable.hs  Record.hs  RecordPuns.hs  RecordU.hs  TIC.hs  TIP.hs  Variant.hs
nix/: local.sources.json  sources.json
nix/haskell/: overlay.nix
refined/: Refined.hs
refined/Refined/Unsafe/: Type.hs
sandbox-effect/: SandBoxEffect.hs
sandbox-effect/CallSpecs/: Cp.hs  CpManyToDir.hs  CpOne.hs  Date.hs  FindCases.hs  GitInit.hs  GitInitExit1.hs  GitRemote.hs  GitSubcases.hs
src/System/Process/: Quick.hs  Th.hs
src/System/Process/Quick/: CallArgument.hs  CallEffect.hs  CallSpec.hs  OrphanArbitrary.hs  Predicate.hs  Prelude.hs  Pretty.hs  TdfaToSbvRegex.hs  Util.hs
src/System/Process/Quick/CallSpec/: Init.hs  Run.hs  Subcases.hs  Type.hs  Verify.hs
src/System/Process/Quick/CallSpec/Verify/: ImportOverlook.hs  Sandbox.hs  TrailingHelp.hs  Type.hs
src/System/Process/Quick/Predicate/: ImplDir.hs  InDir.hs  InFile.hs  LowerCase.hs  Regex.hs
src/System/Process/Quick/Sbv/: Arbitrary.hs
src/System/Process/Th/: CallArgument.hs  CallEffect.hs  CallSpec.hs  OrphanArbitrary.hs  Predicate.hs  Prelude.hs  Pretty.hs  TdfaToSbvRegex.hs
src/System/Process/Th/CallSpec/: Run.hs  Subcases.hs  Type.hs  Verify.hs
src/System/Process/Th/Predicate/: ImplDir.hs  InDir.hs  InFile.hs  InputFile.hs  LowerCase.hs  Regex.hs
src/System/Process/Th/Sbv/: Arbitrary.hs
test/: Driver.hs
test/System/Process/Quick/Test/: CallSpec.hs  Env.hs  Prelude.hs  Th.hs
test/System/Process/Quick/Test/CallSpec/: Const.hs  VarArg.hs
test/System/Process/Quick/Test/CallSpec/VarArg/: Refined.hs
test/System/Process/Th/Test/: CallSpec.hs  Env.hs  Prelude.hs  Th.hs
test/System/Process/Th/Test/CallSpec/: Const.hs  VarArg.hs
test/System/Process/Th/Test/CallSpec/VarArg/: Refined.hs
verify-call-specs/: VerifyCallSpecs.hs
verify-call-specs/CallSpecs/: Find.hs
verify-call-specs/CallSpecs/Find/: Type.hs
