cabal-version: 3.0
name:          th-process
version:       0.0.1
synopsis:      Run external processes verified at compilation
description:   The library checks program name during compilation,
               generates exec spec to be verified in tests, before installation
               or before launch.

homepage:      http://github.com/yaitskov/th-process
license:       BSD-3-Clause
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2025
category:      System
build-type:    Simple
bug-reports:   https://github.com/yaitskov/th-process/issues
source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/th-process.git

library
  exposed-modules:
    System.Process.Th
    System.Process.Th.CallArgument
    System.Process.Th.CallSpec
    System.Process.Th.Prelude
  build-depends:
      HList
    , QuickCheck
    , base >=4 && <5
    , bytestring
    , casing
    , containers
    , generic-random
    , ghc
    , mtl
    , process
    , refined
    , regex-compat
    , relude
    , sbv
    , syb
    , template-haskell
    , text
    , th-utilities

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ImportQualifiedPost
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

test-suite test
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Discovery
    System.Process.Th.Test.CallSpec
    System.Process.Th.Test.CallSpec.Const
    System.Process.Th.Test.CallSpec.VarArg
    System.Process.Th.Test.CallSpec.VarArg.Refined
    System.Process.Th.Test.Prelude
    System.Process.Th.Test.Th
    Paths_th_process
  autogen-modules:
    Paths_th_process
  hs-source-dirs:
    test
  default-extensions:
    LambdaCase
    OverloadedStrings
    OverloadedLabels
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoImplicitPrelude
    NumericUnderscores
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
  ghc-options: -Wall -dynamic -rtsopts -threaded -main-is Driver
  build-depends:
      Glob
    , HList
    , HUnit
    , QuickCheck
    , base
    , bytestring
    , containers
    , data-default
    , directory
    , errors
    , exceptions
    , fmt
    , formatting
    , generic-lens
    , generic-random
    , lens
    , process
    , quickcheck-instances
    , random
    , th-utilities
    , refined
    , relude
    , sbv
    , tasty
    , tasty-discover
    , tasty-expected-failure
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , temporary
    , text
    , th-lift-instances
    , th-process
    , unix
    , unliftio
    , unordered-containers
  default-language: Haskell2010
